--- a/App/SCSS/styles.css
+++ b/App/SCSS/styles.css
@@ -19,8 +19,12 @@ body {
   font-weight: 500;
   height: 100vh;
   width: 100vw;
-  color: #a4a9bf;
+  color: #7280a7;
   font-family: "Red Hat Display", sans-serif;
+}
+
+body h1 {
+  font-size: 1.8rem;
 }
 
 .orders-container {
